--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -73,24 +73,12 @@
                         <li><a href="{{ site.android_api }}license-verification-listener.html" class="otherLinkColour">LicenseVerificationListener</a></li>
                     </ul>
                 </li>
-                <li lang="android" ><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
-                    <ul lang="android" >
-                        <li lang="android" ><a href="{{ site.enumerations }}binarization-mode.html" class="otherLinkColour">EnumBinarizationMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}colour-conversion-mode.html" class="otherLinkColour">EnumColourConversionMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}content-type.html" class="otherLinkColour">EnumContentType</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}deskew-mode.html" class="otherLinkColour">EnumDeskewMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}grayscale-enhancement-mode.html" class="otherLinkColour">EnumGrayscaleEnhancementMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}grayscale-transformation-mode.html" class="otherLinkColour">EnumGrayscaleTransformationMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}image-colour-mode.html" class="otherLinkColour">EnumImageColourMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}image-pixel-format.html" class="otherLinkColour">EnumImagePixelFormat</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}line-extraction-mode.html" class="otherLinkColour">EnumLineExtractionMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}quadrilateral-detection-mode.html" class="otherLinkColour">EnumQuadrilateralDetectionMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}region-predetection-mode.html" class="otherLinkColour">EnumRegionPredetectionMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}text-filter-mode.html" class="otherLinkColour">EnumTextFilterMode</a></li>
-                        <li lang="android" ><a href="{{ site.enumerations }}texture-detection-mode.html" class="otherLinkColour">EnumTextureDetectionMode</a></li>
+                <li><a>Enumerations</a>
+                    <ul>
+                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=android" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}error-code.html?src=android" class="otherLinkColour">EnumDMErrorCode</a></li>
                     </ul>
                 </li>
-                <!-- {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameters/parameters-enumerations.html" -%} -->
             </ul>
         </li>
         <li><a href="{{ site.android_release_notes }}" class="otherLinkColour">Release Notes</a>
