--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -25,7 +25,20 @@
                 </li>
                 <li><a>Enumerations</a>
                     <ul>
+                        <li><a href="{{ site.enumerations }}binarization-mode.html?src=cpp" class="otherLinkColour">BinarizationMode</a></li>
+                        <li><a href="{{ site.enumerations }}colour-conversion-mode.html?src=cpp" class="otherLinkColour">ColourConversionMode</a></li>
+                        <li><a href="{{ site.enumerations }}content-type.html?src=cpp" class="otherLinkColour">ContentType</a></li>
+                        <li><a href="{{ site.enumerations }}deskew-mode.html?src=cpp" class="otherLinkColour">DeskewMode</a></li>
+                        <li><a href="{{ site.enumerations }}grayscale-enhancement-mode.html?src=cpp" class="otherLinkColour">GrayscaleEnhancementMode</a></li>
+                        <li><a href="{{ site.enumerations }}grayscale-transformation-mode.html?src=cpp" class="otherLinkColour">GrayscaleTransformationMode</a></li>
+                        <li><a href="{{ site.enumerations }}image-colour-mode.html?src=cpp" class="otherLinkColour">ImageColourMode</a></li>
                         <li><a href="{{ site.enumerations }}image-pixel-format.html?src=cpp" class="otherLinkColour">ImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}line-extraction-mode.html?src=cpp" class="otherLinkColour">LineExtractionMode</a></li>
+                        <li><a href="{{ site.enumerations }}quadrilateral-detection-mode.html?src=cpp" class="otherLinkColour">QuadrilateralDetectionMode</a></li>
+                        <li><a href="{{ site.enumerations }}region-predetection-mode.html?src=cpp" class="otherLinkColour">RegionPredetectionMode</a></li>
+                        <li><a href="{{ site.enumerations }}text-filter-mode.html?src=cpp" class="otherLinkColour">TextFilterMode</a></li>
+                        <li><a href="{{ site.enumerations }}texture-detection-mode.html?src=cpp" class="otherLinkColour">TextureDetectionMode</a></li>
+                        <li><a href="{{ site.enumerations }}error-code.html?src=cpp" class="otherLinkColour">EnumDMErrorCode</a></li>
                     </ul>
                 </li>
             </ul>
