add download button

--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -30,7 +30,7 @@
                             <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                         </li>
                     </ul>
-                    <!-- <a class="downloadBtn fr hide-lg textUpperCase" href="{{site.download}}">Download Free Trial</a> -->
+                    <a class="downloadBtn fr hide-lg textUpperCase" href="{{site.download}}">Download Free Trial</a>
                 </div>
             </div>
         </div>
