js 1.0.0 menu fix

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -11,16 +11,16 @@
                         <li><a href="{{ site.javascript_api }}settings.html" class="otherLinkColour">Settings</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.javascript_api }}interface-index.html" class="otherLinkColour">Interfaces</a>
+                <li><a>Interfaces</a>
                     <ul>
-                        <li><a href="{{ site.javascript_api }}interface/detected-quad-result.html" class="otherLinkColour">DetectedQuadResult</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/normalized-image-result.html" class="otherLinkColour">NormalizedImageResult</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/scansettings.html" class="otherLinkColour">ScanSettings</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/quadrilateral.html" class="otherLinkColour">Quadrilateral</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/point.html" class="otherLinkColour">Point</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/imagesource.html" class="otherLinkColour">ImageSource</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/ddn-image.html" class="otherLinkColour">DDNImage</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/dsimage.html" class="otherLinkColour">DSImage</a></li>
+                        <li><a href="{{ site.javascript_api }}interface/detected-quad-result.html?src=javascript" class="otherLinkColour">DetectedQuadResult</a></li>
+                        <li><a href="{{ site.javascript_api }}interface/normalized-image-result.html?src=javascript" class="otherLinkColour">NormalizedImageResult</a></li>
+                        <li><a href="{{ site.javascript-api }}interface/scansettings.html?src=javascript" class="otherLinkColour">ScanSettings</a></li>
+                        <li><a href="{{ site.javascript_api }}interface/quadrilateral.html?src=javascript" class="otherLinkColour">Quadrilateral</a></li>
+                        <li><a href="{{ site.javascript-api }}interface/point.html?src=javascript" class="otherLinkColour">Point</a></li>
+                        <li><a href="{{ site.javascript-api }}interface/imagesource.html?src=javascript" class="otherLinkColour">ImageSource</a></li>
+                        <li><a href="{{ site.javascript_api }}interface/ddn-image.html?src=javascript" class="otherLinkColour">DDNImage</a></li>
+                        <li><a href="{{ site.javascript-api }}interface/dsimage.html?src=javascript" class="otherLinkColour">DSImage</a></li>
                     </ul>
                 </li>
                 <li><a>Enumerations</a>
