js 1.0.0 menu fix2

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -13,14 +13,14 @@
                 </li>
                 <li><a>Interfaces</a>
                     <ul>
-                        <li><a href="{{ site.javascript_api }}interface/detected-quad-result.html?src=javascript" class="otherLinkColour">DetectedQuadResult</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/normalized-image-result.html?src=javascript" class="otherLinkColour">NormalizedImageResult</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/scansettings.html?src=javascript" class="otherLinkColour">ScanSettings</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/quadrilateral.html?src=javascript" class="otherLinkColour">Quadrilateral</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/point.html?src=javascript" class="otherLinkColour">Point</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/imagesource.html?src=javascript" class="otherLinkColour">ImageSource</a></li>
-                        <li><a href="{{ site.javascript_api }}interface/ddn-image.html?src=javascript" class="otherLinkColour">DDNImage</a></li>
-                        <li><a href="{{ site.javascript-api }}interface/dsimage.html?src=javascript" class="otherLinkColour">DSImage</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/detected-quad-result.html?src=javascript" class="otherLinkColour">DetectedQuadResult</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/normalized-image-result.html?src=javascript" class="otherLinkColour">NormalizedImageResult</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/scansettings.html?src=javascript" class="otherLinkColour">ScanSettings</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/quadrilateral.html?src=javascript" class="otherLinkColour">Quadrilateral</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/point.html?src=javascript" class="otherLinkColour">Point</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/imagesource.html?src=javascript" class="otherLinkColour">ImageSource</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/ddn-image.html?src=javascript" class="otherLinkColour">DDNImage</a></li>
+                        <li><a href="{{ site.javascript_api }}interfaces/dsimage.html?src=javascript" class="otherLinkColour">DSImage</a></li>
                     </ul>
                 </li>
                 <li><a>Enumerations</a>
