--- a/_includes/sidelist-programming/programming-c.html
+++ b/_includes/sidelist-programming/programming-c.html
@@ -24,22 +24,10 @@
                 </li>
                 <li><a>Enumerations</a>
                     <ul>
-                        <li><a href="{{ site.enumerations }}binarization-mode.html?src=c" class="otherLinkColour">BinarizationMode</a></li>
-                        <li><a href="{{ site.enumerations }}colour-conversion-mode.html?src=c" class="otherLinkColour">ColourConversionMode</a></li>
-                        <li><a href="{{ site.enumerations }}content-type.html?src=c" class="otherLinkColour">ContentType</a></li>
-                        <li><a href="{{ site.enumerations }}deskew-mode.html?src=c" class="otherLinkColour">DeskewMode</a></li>
-                        <li><a href="{{ site.enumerations }}grayscale-enhancement-mode.html?src=c" class="otherLinkColour">GrayscaleEnhancementMode</a></li>
-                        <li><a href="{{ site.enumerations }}grayscale-transformation-mode.html?src=c" class="otherLinkColour">GrayscaleTransformationMode</a></li>
-                        <li><a href="{{ site.enumerations }}image-colour-mode.html?src=c" class="otherLinkColour">ImageColourMode</a></li>
                         <li><a href="{{ site.enumerations }}image-pixel-format.html?src=c" class="otherLinkColour">ImagePixelFormat</a></li>
-                        <li><a href="{{ site.enumerations }}line-extraction-mode.html?src=c" class="otherLinkColour">LineExtractionMode</a></li>
-                        <li><a href="{{ site.enumerations }}quadrilateral-detection-mode.html?src=c" class="otherLinkColour">QuadrilateralDetectionMode</a></li>
-                        <li><a href="{{ site.enumerations }}region-predetection-mode.html?src=c" class="otherLinkColour">RegionPredetectionMode</a></li>
-                        <li><a href="{{ site.enumerations }}text-filter-mode.html?src=c" class="otherLinkColour">TextFilterMode</a></li>
-                        <li><a href="{{ site.enumerations }}texture-detection-mode.html?src=c" class="otherLinkColour">TextureDetectionMode</a></li>
-                        <li><a href="{{ site.enumerations }}error-code.html?src=c" class="otherLinkColour">EnumDMErrorCode</a></li>
                     </ul>
                 </li>
+                <li><a href="{{ site.enumerations }}error-code.html?src=c" class="otherLinkColour">Error Codes</a></li>
             </ul>
         </li>
         <li><a href="{{ site.c_release_notes }}" class="otherLinkColour">Release Notes</a>
