--- a/_includes/sidelist-programming/programming-xamarin.html
+++ b/_includes/sidelist-programming/programming-xamarin.html
@@ -10,25 +10,39 @@
         </li>  -->
         <li><a href="{{ site.xamarin_api }}index.html" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a href="{{ site.xamarin_api }}auxiliary-index.html" class="otherLinkColour">nameSpace DDNXamarin</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin</a>
                     <ul>
-                        <li><a href="{{ site.xamarin_api }}quadrilateral.html" class="otherLinkColour">IDocumentNormalizer</a></li>
+                        <li><a href="{{ site.xamarin_api }}document-normalizer.html" class="otherLinkColour">IDocumentNormalizer</a></li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Auxiliary Classes/Interfaces</a>
-                            <ul>                                
-                                <li><a href="{{ site.xamarin_api }}quadrilateral.html" class="otherLinkColour">Class Quadrilateral</a></li>
-                                <li><a href="{{ site.xamarin_api }}image-data.html" class="otherLinkColour">Class ImageData</a></li>
-                                <li><a href="{{ site.xamarin_api }}detected-quad-result.html" class="otherLinkColour">Class DetectedQuadResult</a></li>
-                                <li><a href="{{ site.xamarin_api }}normalized-image-result.html" class="otherLinkColour">Class NormalizedImageResult</a></li>
-                                <li><a href="{{ site.xamarin_api }}license-manager.html" class="otherLinkColour">Interface ILicenseManager</a></li>
-                                <li><a href="{{ site.xamarin_api }}detect-result-listener.html" class="otherLinkColour">Interface IDetectResultListener</a></li>
-                                <li><a href="{{ site.xamarin_api }}license-verification-listener.html" class="otherLinkColour">Interface ILicenseVerificationListener</a></li>
+                            <ul>
+                                <li><a href="{{ site.xamarin_api }}quadrilateral.html" class="otherLinkColour">Quadrilateral</a></li>
+                                <li><a href="{{ site.xamarin_api }}image-data.html" class="otherLinkColour">ImageData</a></li>
+                                <li><a href="{{ site.xamarin_api }}detected-quad-result.html" class="otherLinkColour">DetectedQuadResult</a></li>
+                                <li><a href="{{ site.xamarin_api }}normalized-image-result.html" class="otherLinkColour">NormalizedImageResult</a></li>
+                                <li><a href="{{ site.xamarin_api }}license-manager.html" class="otherLinkColour">ILicenseManager</a></li>
+                                <li><a href="{{ site.xamarin_api }}detect-result-listener.html" class="otherLinkColour">IDetectResultListener</a></li>
+                                <li><a href="{{ site.xamarin_api }}license-verification-listener.html" class="otherLinkColour">ILicenseVerificationListener</a></li>
+                            </ul>
+                        </li>
+                        <li><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
+                            <ul>
+                                <li><a href="{{ site.xamarin_api }}enum-image-pixel-format.html" class="otherLinkColour">EnumImagePixelFormat</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li><a>Enumerations</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin.Droid</a>
                     <ul>
-                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=xamarin" class="otherLinkColour">EnumImagePixelFormat</a></li>
+                        <li><a href="{{ site.xamarin_api }}droid-document-normalizer.html" class="otherLinkColour">DCVDocumentNormalizer</a></li>
+                        <li><a href="{{ site.xamarin_api }}droid-camera-enhancer.html" class="otherLinkColour">DCVCameraEnhancer</a></li>
+                        <li><a href="{{ site.xamarin_api }}droid-license-manager.html" class="otherLinkColour">DCVLicenseManager</a></li>
+                    </ul>
+                </li>
+                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin.iOS</a>
+                    <ul>
+                        <li><a href="{{ site.xamarin_api }}ios-document-normalizer.html" class="otherLinkColour">DCVDocumentNormalizer</a></li>
+                        <li><a href="{{ site.xamarin_api }}ios-camera-enhancer.html" class="otherLinkColour">DCVCameraEnhancer</a></li>
+                        <li><a href="{{ site.xamarin_api }}ios-license-manager.html" class="otherLinkColour">DCVLicenseManager</a></li>
                     </ul>
                 </li>
             </ul>
