--- a/_includes/sidelist-programming/programming-xamarin.html
+++ b/_includes/sidelist-programming/programming-xamarin.html
@@ -10,7 +10,7 @@
         </li>  -->
         <li><a href="{{ site.xamarin_api }}index.html" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">namespace DDNXamarin</a>
                     <ul>
                         <li><a href="{{ site.xamarin_api }}document-normalizer.html" class="otherLinkColour">IDocumentNormalizer</a></li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Auxiliary Classes/Interfaces</a>
@@ -31,14 +31,14 @@
                         </li>
                     </ul>
                 </li>
-                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin.Droid</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">namespace DDNXamarin.Droid</a>
                     <ul>
                         <li><a href="{{ site.xamarin_api }}droid-document-normalizer.html" class="otherLinkColour">DCVDocumentNormalizer</a></li>
                         <li><a href="{{ site.xamarin_api }}droid-camera-enhancer.html" class="otherLinkColour">DCVCameraEnhancer</a></li>
                         <li><a href="{{ site.xamarin_api }}droid-license-manager.html" class="otherLinkColour">DCVLicenseManager</a></li>
                     </ul>
                 </li>
-                <li><a style="cursor:pointer;color:#3c3c3c">nameSpace DDNXamarin.iOS</a>
+                <li><a style="cursor:pointer;color:#3c3c3c">namespace DDNXamarin.iOS</a>
                     <ul>
                         <li><a href="{{ site.xamarin_api }}ios-document-normalizer.html" class="otherLinkColour">DCVDocumentNormalizer</a></li>
                         <li><a href="{{ site.xamarin_api }}ios-camera-enhancer.html" class="otherLinkColour">DCVCameraEnhancer</a></li>
