--- a/_includes/sidelist-programming/programming-xamarin.html
+++ b/_includes/sidelist-programming/programming-xamarin.html
@@ -1,4 +1,4 @@
-<li><a href="{{ site.xamarin }}" class="otherLinkColour">xamarin</a>
+<li><a href="{{ site.xamarin }}" class="otherLinkColour">Xamarin.Forms</a>
     <ul>
         <li><a href="{{ site.xamarin }}user-guide.html" class="otherLinkColour">User Guide</a>
         </li>
