Updated mobile docs

--- a/_includes/sidelist-programming/programming-xamarin.html
+++ b/_includes/sidelist-programming/programming-xamarin.html
@@ -19,6 +19,8 @@
                                 <li><a href="{{ site.xamarin_api }}image-data.html" class="otherLinkColour">ImageData</a></li>
                                 <li><a href="{{ site.xamarin_api }}detected-quad-result.html" class="otherLinkColour">DetectedQuadResult</a></li>
                                 <li><a href="{{ site.xamarin_api }}normalized-image-result.html" class="otherLinkColour">NormalizedImageResult</a></li>
+                                <li><a href="{{ site.xamarin_api }}camera-view.html" class="otherLinkColour">DCVCameraView</a></li>
+                                <li><a href="{{ site.xamarin_api }}image-editor-view.html" class="otherLinkColour">DCVImageEditorView</a></li>
                                 <li><a href="{{ site.xamarin_api }}license-manager.html" class="otherLinkColour">ILicenseManager</a></li>
                                 <li><a href="{{ site.xamarin_api }}detect-result-listener.html" class="otherLinkColour">IDetectResultListener</a></li>
                                 <li><a href="{{ site.xamarin_api }}license-verification-listener.html" class="otherLinkColour">ILicenseVerificationListener</a></li>
