--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1,6 +1,6 @@
 <li><a href="{{ site.javascript }}" class="otherLinkColour">JavaScript</a>
     <ul>
-        <li><a href="{{ site.javascript }}user-guide.html" class="otherLinkColour">User Guide</a>
+        <li><a href="{{ site.javascript_user_guide }}index.html" class="otherLinkColour">User Guide</a>
         </li>    
         <li><a href="{{ site.javascript_api }}index.html" class="otherLinkColour">API Reference</a>
             <ul>
