--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -14,7 +14,7 @@
     <div class="sideBarIcon"><i class="fa fa-list" style="margin-right: 5px;"></i> Table of contents</div>
     <div class="container" id="categoryMenuTree">
         <div class="row">
-            <div class="sideBar col-xs-12 col-md-3 hide-xs hide-sm">
+            <div class="sideBar col-xs-12 col-lg-3 hide-xs hide-sm hide-md">
                 <div id="sideBarCnt">
                     <div class="docSearchPart" style="margin-top: 30px;">
                         <input id="txtSearch" class="search" type="text">
@@ -25,8 +25,8 @@
                     </div>
                 </div>
             </div>
-            <div class="docContainer col-xs-12 col-md-9">
-                <div id="docHead" class = "head row hide-xs hide-sm">
+            <div class="docContainer col-xs-12 col-lg-9">
+                <div id="docHead" class = "head row hide-xs hide-sm hide-md">
                     {%- include main-page-head.html -%}
                 </div>
                 <div class="main row showRightSideMenu" id="articleContent" data-needh3="{{page.needGenerateH3Content}}">
