--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -50,9 +50,10 @@
                                 <li><a href="{{ site.android_api }}camera-enhancer/region-definition.html" class="otherLinkColour">RegionDefinition</a></li>
                             </ul>
                         </li>
-                        <li><a style="cursor:pointer;color:#3c3c3c">Protocol</a>
+                        <li><a style="cursor:pointer;color:#3c3c3c">Interfaces</a>
                             <ul>
                                 <li><a href="{{ site.android_api }}camera-enhancer/interface-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/interface-dcephotolistener.html" class="otherLinkColour">DCEPhotoListener</a></li>
                             </ul>
                         </li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
