--- a/_includes/sidelist-programming/programming-android.html
+++ b/_includes/sidelist-programming/programming-android.html
@@ -52,6 +52,7 @@
                         </li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Interfaces</a>
                             <ul>
+                                <li><a href="{{ site.android_api }}camera-enhancer/interface-dcecamerastatelistener.html" class="otherLinkColour">DCECameraStateListener</a></li>
                                 <li><a href="{{ site.android_api }}camera-enhancer/interface-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
                                 <li><a href="{{ site.android_api }}camera-enhancer/interface-dcephotolistener.html" class="otherLinkColour">DCEPhotoListener</a></li>
                             </ul>
@@ -59,6 +60,7 @@
                         <li><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
                             <ul>
                                 <li><a href="{{ site.android_api }}camera-enhancer/enum-enhancer-features.html" class="otherLinkColour">EnumEnhancerFeatures</a></li>
+                                <li><a href="{{ site.android_api }}camera-enhancer/enum-focus-mode.html" class="otherLinkColour">EnumFocusMode</a></li>
                                 <li><a href="{{ site.android_api }}camera-enhancer/enum-frame-quality.html" class="otherLinkColour">EnumFrameQuality</a></li>
                                 <li><a href="{{ site.android_api }}camera-enhancer/enum-camera-state.html" class="otherLinkColour">EnumCameraState</a></li>
                                 <li><a href="{{ site.android_api }}camera-enhancer/enum-resolution.html" class="otherLinkColour">EnumResolution</a></li>
