--- a/_includes/sidelist-programming/programming-ios.html
+++ b/_includes/sidelist-programming/programming-ios.html
@@ -51,12 +51,14 @@
                         </li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Protocol</a>
                             <ul>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/protocol-dcecamerastatelistener.html" class="otherLinkColour">DCECameraStateListener</a></li>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/protocol-dceframelistener.html" class="otherLinkColour">DCEFrameListener</a></li>
                             </ul>
                         </li>
                         <li><a style="cursor:pointer;color:#3c3c3c">Enumerations</a>
                             <ul>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/enum-enhancer-features.html" class="otherLinkColour">EnumEnhancerFeatures</a></li>
+                                <li><a href="{{ site.ios_api }}camera-enhancer/enum-focus-mode.html" class="otherLinkColour">EnumFocusMode</a></li>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/enum-frame-quality.html" class="otherLinkColour">EnumFrameQuality</a></li>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/enum-camera-state.html" class="otherLinkColour">EnumCameraState</a></li>
                                 <li><a href="{{ site.ios_api }}camera-enhancer/enum-resolution.html" class="otherLinkColour">EnumResolution</a></li>
