--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -3,36 +3,66 @@
         <li><a href="{{ site.cpp }}user-guide/getting-started.html" class="otherLinkColour">User Guide</a></li>
         <li><a href="{{ site.cpp_api }}" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a href="{{ site.cpp_api }}document-normalizer-index.html" class="otherLinkColour">Class CDocumentNormalizer</a>
+                <li><a>dynamsoft::cvr</a>
                     <ul>
-                        <li><a href="{{ site.cpp_api }}document-normalizer-init.html" class="otherLinkColour">Constructor and Destructor</a></li>
-                        <li><a href="{{ site.cpp_api }}document-normalizer-general.html" class="otherLinkColour">General Methods</a></li>
-                        <li><a href="{{ site.cpp_api }}document-normalizer-settings.html" class="otherLinkColour">Setting Methods</a></li>
-                        <li><a href="{{ site.cpp_api }}document-normalizer-normalizing.html" class="otherLinkColour">Detecting and Normalizing Methods</a></li>
-                        <li><a href="{{ site.cpp_api }}document-normalizer-result.html" class="otherLinkColour">Result Methods</a></li>
                     </ul>
                 </li>
-                <li><a>Auxiliary Classes</a>
+                <li><a>dynamsoft::basic_structures</a>
                     <ul>
-                        <li><a href="{{ site.cpp_api }}detected-quad-result.html" class="otherLinkColour">CDetectedQuadResult</a></li>
-                        <li><a href="{{ site.cpp_api }}detected-quad-result-array.html" class="otherLinkColour">CDetectedQuadResultArray</a></li>
-                        <li><a href="{{ site.cpp_api }}image-data.html" class="otherLinkColour">CImageData</a></li>
-                        <li><a href="{{ site.cpp_api }}license-manager.html" class="otherLinkColour">CLicenseManager</a></li>
-                        <li><a href="{{ site.cpp_api }}normalized-image-result.html" class="otherLinkColour">CNormalizedImageResult</a></li>
-                        <li><a href="{{ site.cpp_api }}point.html" class="otherLinkColour">CPoint</a></li>
-                        <li><a href="{{ site.cpp_api }}quadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
+                        <li><a href="{{ site.cpp_api }}CPoint.html" class="otherLinkColour">CPoint</a></li>
+                        <li><a href="{{ site.cpp_api }}CContour.html" class="otherLinkColour">CContour</a></li>
+                        <li><a href="{{ site.cpp_api }}CCorner.html" class="otherLinkColour">CCorner</a></li>
+                        <li><a href="{{ site.cpp_api }}CEdge.html" class="otherLinkColour">CEdge</a></li>
+                        <li><a href="{{ site.cpp_api }}CLineSegment.html" class="otherLinkColour">CLineSegment</a></li>
+                        <li><a href="{{ site.cpp_api }}CQuadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
+                        <li><a href="{{ site.cpp_api }}CRect.html" class="otherLinkColour">CRect</a></li>
+                        <li><a href="{{ site.cpp_api }}CImageTag.html" class="otherLinkColour">CImageTag</a></li>
+                        <li><a href="{{ site.cpp_api }}CFileImageTag.html" class="otherLinkColour">CFileImageTag</a></li>
+                        <li><a href="{{ site.cpp_api }}CVideoFrameTagt.html" class="otherLinkColour">CVideoFrameTag</a></li>
+                        <li><a href="{{ site.cpp_api }}CImageData.html" class="otherLinkColour">CImageData</a></li>
+                        <li><a href="{{ site.cpp_api }}CVideoFrameTag.html" class="otherLinkColour">CVideoFrameTag</a></li>
+                        <li><a href="{{ site.cpp_api }}CCapturedResult.html" class="otherLinkColour">CCapturedResult</a></li>
+                        <li><a href="{{ site.cpp_api }}CCapturedResultItem.html" class="otherLinkColour">CCapturedResultItem</a></li>
+                    </ul>
+                </li>
+                <li><a>dynamsoft::ddn</a>
+                    <ul>
+                        <li><a href="{{ site.cpp_api }}detected-quad-result-item.html" class="otherLinkColour">CDetectedQuadResultItem</a></li>
+                        <li><a href="{{ site.cpp_api }}detected-quads-result.html" class="otherLinkColour">CDetectedQuadsResult</a></li>
+                        <!-- <li><a href="{{ site.cpp_api }}detected-quads-result-array.html" class="otherLinkColour">CDetectedQuadsResultArray</a></li>-->
+                        <li><a href="{{ site.cpp_api }}normalized-image-result-item.html" class="otherLinkColour">CNormalizedImageResultItem</a></li>
+                        <li><a href="{{ site.cpp_api }}normalized-images-result.html" class="otherLinkColour">CNormalizedImagesResult</a></li>
+                        <!-- <li><a href="{{ site.cpp_api }}normalized-images-result-array.html" class="otherLinkColour">CNormalizedImagesResultArray</a></li>-->
+                    </ul>
+                </li>
+                <li><a>dynamsoft::intermediate_results</a>
+                    <ul>
+                        <li><a href="{{ site.cpp_api }}intermediate-result-unit.html" class="otherLinkColour">CIntermediateResultUnit</a></li>
+                    </ul>
+                </li>
+                <li><a>dynamsoft::ddn::intermediate_results</a>
+                    <ul>
+                        <li><a href="{{ site.cpp_api }}candidate-quad-edges-unit.html" class="otherLinkColour">CCandidateQuadEdgesUnit</a></li>
+                        <li><a href="{{ site.cpp_api }}corners-unit.html" class="otherLinkColour">CCornersUnit</a></li>
+                        <li><a href="{{ site.cpp_api }}detected-quad-element.html" class="otherLinkColour">CDetectedQuadElement</a></li>
+                        <li><a href="{{ site.cpp_api }}detected-quads-unit.html" class="otherLinkColour">CDetectedQuadsUnit</a></li>
+                        <li><a href="{{ site.cpp_api }}long-lines-unit.html" class="otherLinkColour">CLongLinesUnit</a></li>
+                        <li><a href="{{ site.cpp_api }}normalized-image-element.html" class="otherLinkColour">CNormalizedImageElement</a></li>
+                        <li><a href="{{ site.cpp_api }}normalized-image-unit.html" class="otherLinkColour">CNormalizedImageUnit</a></li>
                     </ul>
                 </li>
                 <li><a>Enumerations</a>
                     <ul>
+                        <li><a href="{{ site.enumerations }}captured-result-item-type.html" class="otherLinkColour">CapturedResultItemType</a></li>
+                        <li><a href="{{ site.enumerations }}error-code.html" class="otherLinkColour">ErrorCode</a></li>
                         <li><a href="{{ site.enumerations }}image-pixel-format.html?src=cpp" class="otherLinkColour">ImagePixelFormat</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ site.enumerations }}error-code.html?src=cpp" class="otherLinkColour">Error Codes</a></li>
             </ul>
         </li>
         <li><a href="{{ site.cpp_release_notes }}" class="otherLinkColour">Release Notes</a>
             <ul>
+                <li><a href="{{ site.cpp_release_notes }}cpp-2.html" class="otherLinkColour">Version 2.x</a></li>
                 <li><a href="{{ site.cpp_release_notes }}cpp-1.html" class="otherLinkColour">Version 1.x</a></li>
             </ul>
         </li>
